# scattershot

./: LICENSE  README.md  scattershot.py  setup.cfg
