[metadata]
name = scattershot
version = 0.0.1
author = SWISS TXT AG
author_email = info@swisstxt.ch
description = HTTP range request testing tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/swisstxt/scattershot
project_urls =
    Bug Tracker = https://github.com/swisstxt/scattershot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
scripts =
    scattershot.py
